<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="30dip"
    android:orientation="horizontal" >


<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dip"
        android:layout_weight="0.53"
        android:text="@string/Main_title"
        android:textSize="24.5dip" />
	    
    <Button
        android:id="@+id/New_Game_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/New_Game_label" />

    <Button
        android:id="@+id/Resume_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Resume_label" />

    <Button
        android:id="@+id/Scoreboard_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Scoreboard_label" />

    <Button
        android:id="@+id/About_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/About_label" />

    <Button
        android:id="@+id/Exit_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Exit_label" />
        "
</LinearLayout>
    
</LinearLayout>
